<resources>
    <string name="app_name">Humanoo</string>
    <string name="rating">Rating: %.1f</string>
    <string name="docName">Name: </string>
    <string name="docAddress">Adress: </string>
    <string name="loadingDetail">Getting Details..</string>
    <string name="docPhone">Phone :</string>
    <string name="error">An error has occurred</string>
    <string name="loading">Loading . . .</string>
    <string name="web_button">VIEW WEBSITE</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipeTitle">The title of the recipe</string>
    <string name="create_meal">Create the perfect healthy meal</string>
    <string name="ingDetails">\u2022 Fresh tomatoes \n\u2022 Non frozen spinach \n\u2022 Ricotta cheese </string>
</resources>
