<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        <WebView
                android:id="@+id/recipeWebView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:visibility="gone"
        />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="fill_parent"
                android:id="@+id/gitDetailView"
                android:background="@color/Innuendo"
                android:layout_height="fill_parent"
                android:clickable="true"
                android:focusable="true">


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/white">

                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="MissingConstraints">

                    <ImageView
                            android:id="@+id/image"
                            android:layout_width="match_parent"
                            android:layout_height="220dp"
                            android:scaleType="centerCrop"
                            android:transitionName="tImage"/>


                </FrameLayout>

                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <LinearLayout
                            android:id="@+id/placeNameHolder"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:background="@color/white"
                            android:transitionName="tNameHolder">

                        <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/recipeName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:textSize="25dp"
                                android:textColor="@android:color/black"
                                android:text="@string/recipeTitle"
                                android:paddingRight="10dp"
                                android:paddingLeft="50dp"/>

                    </LinearLayout>
                </FrameLayout>

                <FrameLayout android:layout_width="match_parent"
                             android:layout_height="wrap_content">
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:background="@color/twinkleBlue">


                        <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ingredients"
                                app:fontFamily="@font/manropemedium"
                                android:textColor="@color/black"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:layout_marginTop="30dp"
                                android:layout_marginLeft="50dp"/>


                        <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:fontFamily="@font/manropemedium"
                                android:textColor="@color/black"
                                android:id="@+id/ingredients"
                                android:text="@string/ingDetails"
                                android:layout_marginTop="10dp"
                                android:layout_marginLeft="50dp"
                                android:layout_marginBottom="20dp"/>


                    </LinearLayout>

                </FrameLayout>

                <Button
                        android:id="@+id/recipeButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="30dp"
                        android:text="@string/web_button"
                        android:background="@drawable/curved_button"
                />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</layout>

