<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="view" type="com.amoon.recipelist.ui.MainActivity"/>
        <variable name="viewModel" type="com.amoon.recipelist.ui.MainViewModel"/>
        <import type="android.view.View"/>

        <variable
                name="isLoading"
                type="boolean"/>

        <variable
                name="isFailed"
                type="boolean"/>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:id="@+id/coordinatorLayoutActivity"
            tools:context=".ui.MainActivity"
    >


        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


            <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsingToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:fitsSystemWindows="true"
                    app:contentScrim="?attr/colorPrimary"
                    app:expandedTitleGravity="bottom"
                    app:expandedTitleMarginEnd="16dp"
                    app:expandedTitleMarginStart="16dp"
                    app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            >


                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/curved_background"
                        android:scaleType="fitXY"
                        app:layout_collapseMode="parallax"
                />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="20dp"
                        android:orientation="vertical"
                        android:id="@+id/searchviewLinear"
                        app:layout_collapseMode="parallax">


                    <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/createMealText"
                            android:text="@string/create_meal"
                            app:fontFamily="@font/manropemedium"
                            android:textColor="@color/white"
                            android:layout_gravity="center"
                            android:layout_marginBottom="20dp"/>


                    <SearchView
                            android:id="@+id/ingSearchView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:iconifiedByDefault="false"
                            android:queryHint="Filter by Ingredients"
                            android:background="@drawable/curved_searchview"
                            android:padding="2dp"
                            android:queryBackground="@android:color/transparent"
                            android:focusable="false"
                            android:layout_gravity="center"
                            android:fitsSystemWindows="true"
                    />


                </LinearLayout>

                <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_collapseMode="pin"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>



            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imageRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/mainActivityRoot"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">


            <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:id="@+id/loadingLayout"
                    android:visibility="@{isLoading? View.GONE : View.VISIBLE}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_height="0dp">

                <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/loadingAnim"
                        android:layout_width="@dimen/loading_anim_size"
                        android:layout_height="@dimen/loading_anim_size"
                        android:layout_gravity="center"
                        app:lottie_loop="true"
                        app:lottie_fileName="anims/loading.json"
                        android:background="@null"
                        app:lottie_autoPlay="true"/>


                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:fontFamily="@font/manropemedium"
                        android:layout_height="wrap_content"
                        android:text="@string/loading"
                        android:textSize="16sp"
                        android:layout_gravity="center"
                        android:id="@+id/loadingText"
                        app:layout_constraintRight_toRightOf="parent"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:id="@+id/errorLayout"
                    android:visibility="@{isFailed? View.VISIBLE : View.GONE}"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="16sp"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:layout_marginRight="16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_height="wrap_content">

                <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="@dimen/failed_anim_size"
                        android:layout_height="@dimen/failed_anim_size"
                        android:layout_gravity="center"
                        app:lottie_loop="true"
                        app:lottie_fileName="anims/internet_error.json"
                        android:id="@+id/animation_view2"
                        app:lottie_autoPlay="true"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/error"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:id="@+id/errorText"
                        app:fontFamily="@font/manropemedium"
                        android:layout_gravity="center"
                        android:gravity="center"
                        app:layout_constraintTop_toBottomOf="@+id/animation_view2"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>